--- a/styles.css
+++ b/styles.css
@@ -231,12 +231,16 @@ footer a {
 #loginForm button {
     width: 100%;
     padding: 10px;
+    margin-top: 10px;
+    margin-right: 0.2%;
+    margin-left: 0.2%;
     background-color: var(--accent-color);
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color var(--transition);
+    position: relative
 }
 
 .error {
@@ -471,7 +475,6 @@ input:checked + .slider:before {
         padding: 5px;
     }
 
-
 }
 
     header {
@@ -517,4 +520,3 @@ input:checked + .slider:before {
         padding: 10px;
         margin-top: 20px;
     }
-}
